add register and login

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,7 +9,9 @@
     <nav>
         <a href="/">Главная</a> |
         <a href="/catalog">Каталог</a> |
-        <a href="/cart">Корзина</a>
+        <a href="/cart">Корзина</a> |
+        <a href="/register">Регистрация</a> |
+        <a href="/login">Вход</a>
     </nav>
     <h1>Добро пожаловать в интернет-магазин!</h1>
     <a href="/catalog">Перейти в каталог товаров</a>
