--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,8 +10,8 @@
         <a href="/">Главная</a> |
         <a href="/catalog">Каталог</a> |
         <a href="/cart">Корзина</a> |
-        <a href="/register">Регистрация</a> |
-        <a href="/login">Вход</a>
+        <a href="/auth/register">Регистрация</a> |
+        <a href="/auth/login">Вход</a>
     </nav>
     <h1>Добро пожаловать в интернет-магазин!</h1>
     <a href="/catalog">Перейти в каталог товаров</a>
